--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "calculator": "ts-node calculator.ts"
+  },
   "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
