--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "scripts": {
     "calculator": "ts-node calculator.ts",
-    "multiplier": "ts-node multiplier.ts"
+    "multiplier": "ts-node multiplier.ts",
+    "tsNode": "cd src && ts-node index.ts",
+    "start": "nodemon",
+    "build:prod": "rimraf ./build && tsc",
+    "start:prod": "npm run build:prod && node build/index.js"
   },
   "devDependencies": {
     "@types/node": "^18.8.2",
     "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
